--- a/index.html
+++ b/index.html
@@ -11,13 +11,33 @@
   <body>
 
 
- <h1> Problem: I crave the Xbox $2 Game Pass </h1>
+ <h1> Steam Application </h1>
 
+<p>   Steam is a video game digital distribution service developed by Valve. It was launched as a standalone software client in September 2003 as a way for Valve to provide automatic updates for their games, and expanded to include games from third-party publishers. </p>
+<p> Some Trending Games now are... </p>
+<ul>
+<a href="https://store.steampowered.com/app/1064220/Halo_Reach/"> Halo Reach (The Master Chief Collection) </a>
+<br>
+<a href="https://store.steampowered.com/app/1174180/Red_Dead_Redemption_2/"> Red Dead Redemeption 2</a>
+<br>
+<a href="https://store.steampowered.com/app/1172380/STAR_WARS_Jedi_Fallen_Order/"> STAR WARS Jedi: Fallen Order </a>
+<br>
+<a href="https://store.steampowered.com/app/440/Team_Fortress_2/">Team Fortress 2</a>
+<br>
+<a href="https://store.steampowered.com/app/782330/DOOM_Eternal/"> Doom:Eternal</a>
+</ul>
 
+<p> More Information </p>
 
+<a href="Halo.html"> Halo Reach... </a>
+<br>
+<a href="Reddead.html"> Red Dead Redemption... </a>
+<br>
+<a href="Jedi.html"> Star Wars Jedi Fallen Order... </a>
+<br>
+<a href="tf2.html">Team Fortress 2... </a>
+<br>
+<a href="Doom.html"> Doom:Eternal... </a>
 
-
-
-<img height="500px" width="400px"src="http://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE2TAjc" alt="Xbox Game Pass" class="img-center">
   </body>
 </html>
