--- a/Reddead.html
+++ b/Reddead.html
@@ -8,6 +8,9 @@
   <body>
 <p> Red Dead Redemption 2 is an action-adventure game developed and published by Rockstar Games. It was released for the PlayStation 4 and Xbox One in October 2018, and for Microsoft Windows and Stadia in November 2019. </p>
 <img width="450px" src="https://hb.imgix.net/75740eb26832ca9e583f573b09a294bcc47fb227.jpg?auto=compress,format&fit=crop&h=353&w=616&s=0a22e38765fcf80ab5d14cb123e6c3aa" alt="">
+<br>
+<a href="index.html"> Return to Homepage</a>
+
 
 
 
