--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title> Xbox box game pass </title>
+    <title> Steam </title>
 
 <link rel="stylesheet" href="css/style.css">
 
