--- a/Halo.html
+++ b/Halo.html
@@ -10,6 +10,9 @@
 
 <p> Halo: Reach is a 2010 first-person shooter developed by Bungie and published by Microsoft Game Studios, originally for the Xbox 360 home video game console. The fifth installment in the mainline Halo series and a direct prequel to Halo: Combat Evolved, Reach was released worldwide in September 2010.</p>
 <img height="300px" width="500px"src="https://1734811051.rsc.cdn77.org/data/thumbs/full/359291/650/0/0/0/halo-master-chief-collection-banner.jpg" alt="">
+<br>
+<a href="index.html"> Return to Homepage</a>
+
 
 
 
